# insta_prepare

./: LICENSE  README.md  pyproject.toml
insta_prepare/: image_resizer.py  insta_prepare.py
